--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,9 @@
 <body class="hold-transition sidebar-mini layout-fixed">
   <app-root></app-root>
 </body>
+<script>
+  $('#myTooltip').on('hidden.bs.tooltip', function () {
+  // do something…
+})
+  </script>
 </html>
